correção midias sociais

--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
     <footer class="bg-dark text-white text-center py-4 position-relative">
         <p>📧 Email: TeamKindWave@outlook.com</p>
         <p>
-            <a href="#" class="text-white me-3"><i class="bi bi-whatsapp"></i></a>
-            <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
+            <a href="https://wa.me/553197898099" class="text-white me-3" target="_blank"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://x.com/TeamKindWave" class="text-white me-3" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.instagram.com/team.kindwave/" class="text-white" target="_blank"><i class="bi bi-instagram"></i></a>
         </p>
         <p>Let’s create a better world together—one game at a time.</p>
         <span class="powered-by">Powered by Luciano Dias</span>
     </footer>
+    
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
