--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- Topo com logo -->
+    <header class="d-flex align-items-center gradient-bg p-3">
+        <img src="assets/kindwave.png" alt="KindWave Logo" class="logo-topo rounded-circle me-3">
+        <h1 class="text-black m-0">KindWave: Transforming Society Through Gaming</h1>
+    </header>
+
+    <!-- Conteúdo principal -->
     <div class="gradient-bg text-white">
         <div class="container py-5">
-            <h1 class="text-center mb-4">KindWave: Transforming Society Through Gaming</h1>
             <div class="row">
                 <div class="col-12">
                     <section class="bg-light p-4 mb-4 rounded">
@@ -80,17 +86,25 @@
             </div>
         </div>
     </div>
-    <footer class="bg-dark text-white text-center py-4 position-relative">
-        <p>📧 Email: TeamKindWave@outlook.com</p>
-        <p>
-            <a href="https://wa.me/5531981199835" class="text-white me-3" target="_blank"><i class="bi bi-whatsapp"></i></a>
-            <a href="https://x.com/TeamKindWave" class="text-white me-3" target="_blank"><i class="bi bi-twitter"></i></a>
-            <a href="https://www.instagram.com/team.kindwave/" class="text-white" target="_blank"><i class="bi bi-instagram"></i></a>
-        </p>
-        <p>Let’s create a better world together—one game at a time.</p>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark text-white text-center py-4 position-relative d-flex flex-column">
+        <div class="d-flex justify-content-center">
+            <img src="assets/kindwave.png" alt="KindWave Logo" class="logo-footer rounded-circle">
+            <div class="ms-3">
+                <p>📧 Email: TeamKindWave@outlook.com</p>
+                <p>
+                    <a href="https://wa.me/5531981199835" class="text-success me-3" target="_blank"><i class="bi bi-whatsapp"></i></a>
+                    <a href="https://x.com/TeamKindWave" class="text-primary me-3" target="_blank"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.instagram.com/team.kindwave/" class="text-danger" target="_blank"><i class="bi bi-instagram"></i></a>
+                </p>
+                <p class="mt-3">Let’s create a better world together—one game at a time.</p>
+            </div>
+        </div>
+        
         <span class="powered-by">Powered by Luciano Dias</span>
     </footer>
-    
+
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
