--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer bg-dark text-white text-center py-4 position-relative d-flex flex-column">
-        <div class="d-flex justify-content-center">
-            <img src="assets/kindwave.png" alt="KindWave Logo" class="logo-footer rounded-circle">
+    <footer class="footer bg-dark text-white text-center py-4 d-flex flex-column align-items-center">
+        <div class="d-flex justify-content-center flex-wrap align-items-center">
+            <img src="assets/kindwave.png" alt="KindWave Logo" class="logo-footer rounded-circle mb-3">
             <div class="ms-3">
                 <p>📧 Email: TeamKindWave@outlook.com</p>
                 <p>
